package com.example.funding.service.query;

import com.example.core.exception.BusinessException;
import com.example.data.entity.datasource.UseWriteDataSource;
import com.example.funding.dto.campaign.response.CampaignResponse;
import com.example.funding.entity.FundingCampaign;
import com.example.funding.exception.FundingErrorCode;
import com.example.funding.repository.FundingCampaignRepository;
import lombok.RequiredArgsConstructor;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;

import java.util.List;

@Service
@RequiredArgsConstructor
@Transactional(readOnly = true)
@UseWriteDataSource
public class InternalCampaignQueryService {

    private final FundingCampaignRepository campaignRepository;
    private final FundingRewardOptionResolver fundingRewardOptionResolver;

    public CampaignResponse findById(Long campaignId) {
        FundingCampaign campaign = campaignRepository.findById(campaignId)
                .orElseThrow(() -> new BusinessException(FundingErrorCode.CAMPAIGN_NOT_FOUND));
        return CampaignResponse.from(campaign, fundingRewardOptionResolver.resolveByItemId(campaign.getItemId()));
    }

    public CampaignResponse findByItemId(Long itemId) {
        FundingCampaign campaign = campaignRepository.findByItemId(itemId)
                .orElseThrow(() -> new BusinessException(FundingErrorCode.CAMPAIGN_NOT_FOUND));
        return CampaignResponse.from(campaign, fundingRewardOptionResolver.resolveByItemId(campaign.getItemId()));
    }

    public List<CampaignResponse> findByIds(List<Long> campaignIds) {
        return campaignRepository.findAllById(campaignIds).stream()
                .map(CampaignResponse::from)
                .toList();
    }
}
